@@ -9,11 +9,12 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 
-import java.util.Arrays;
 import java.util.List;
 
+import static com.lyttledev.lyttleessentials.utils.DisplayName.getDisplayName;
+
 public class AdminTeleportCommand implements CommandExecutor, TabCompleter {
-    private LyttleEssentials plugin;
+    private final LyttleEssentials plugin;
 
     public AdminTeleportCommand(LyttleEssentials plugin) {
         plugin.getCommand("atp").setExecutor(this);
@@ -23,32 +24,42 @@ public class AdminTeleportCommand implements CommandExecutor, TabCompleter {
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
         if (!(sender instanceof Player)) {
-            Message.sendConsole("must_be_player");
+            Message.sendMessage(sender,"must_be_player");
             return true;
         }
 
         Player player = (Player) sender;
 
-        if (!player.hasPermission("lyttleessentials.staff")) {
-            Message.sendPlayer((Player) sender, "no_permission");
+        if (!player.hasPermission("lyttleessentials.admintp")) {
+            Message.sendMessage(sender, "no_permission");
             return true;
         }
 
         if (args.length == 1) {
+            if (!player.hasPermission("lyttleessentials.admintp.self")) {
+                Message.sendMessage(sender, "no_permission");
+                return true;
+            }
+
             Player target = plugin.getServer().getPlayer(args[0]);
 
             if (target == null) {
-                Message.sendPlayer(player, "player_not_found");
+                Message.sendMessage(player, "player_not_found");
                 return true;
             }
 
             player.teleport(target);
 
             String[][] messageReplacements = {
-                { "<USER>", player.getName() },
-                { "<TARGET>", target.getName() }
+                { "<USER>", getDisplayName(player) },
+                { "<TARGET>", getDisplayName(target) }
             };
-            Message.sendPlayer(player, "atp_user", messageReplacements);
+            Message.sendMessage(player, "atp_user", messageReplacements);
+            return true;
+        }
+
+        if (!player.hasPermission("lyttleessentials.admintp.other")) {
+            Message.sendMessage(sender, "no_permission");
             return true;
         }
 
@@ -57,17 +68,17 @@ public class AdminTeleportCommand implements CommandExecutor, TabCompleter {
             Player target = plugin.getServer().getPlayer(args[1]);
 
             if (user == null || target == null) {
-                Message.sendPlayer(player, "player_not_found");
+                Message.sendMessage(player, "player_not_found");
                 return true;
             }
 
             user.teleport(target);
 
             String[][] messageReplacements = {
-                { "<USER>", user.getName() },
-                { "<TARGET>", target.getName() }
+                { "<USER>", getDisplayName(user) },
+                { "<TARGET>", getDisplayName(target) }
             };
-            Message.sendPlayer(player, "atp_user", messageReplacements);
+            Message.sendMessage(player, "atp_user", messageReplacements);
             return true;
         }
 
@@ -75,7 +86,7 @@ public class AdminTeleportCommand implements CommandExecutor, TabCompleter {
             Console.playerCommand(player, "minecraft:tp " + args[0] + " " + args[1] + " " + args[2]);
 
             String[][] messageReplacements = {
-                    { "<USER>", player.getName() },
+                    { "<USER>", getDisplayName(player) },
                     { "<TARGET>", "Loc(" + args[0] + ", " + args[1] + ", " + args[2] + ")" }
             };
             return true;
@@ -85,21 +96,21 @@ public class AdminTeleportCommand implements CommandExecutor, TabCompleter {
             Player user = plugin.getServer().getPlayer(args[0]);
 
             if (user == null) {
-                Message.sendPlayer(player, "player_not_found");
+                Message.sendMessage(player, "player_not_found");
                 return true;
             }
 
-            Console.command("minecraft:execute as " +  user.getName() + " at @s run tp " + args[1] + " " + args[2] + " " + args[3]);
+            Console.command("minecraft:execute as " +  getDisplayName(user) + " at @s run tp " + args[1] + " " + args[2] + " " + args[3]);
 
             String[][] messageReplacements = {
-                    { "<USER>", user.getName() },
+                    { "<USER>", getDisplayName(user) },
                     { "<TARGET>", "Loc(" + args[1] + ", " + args[2] + ", " + args[3] + ")" }
             };
-            Message.sendPlayer(player, "atp_user", messageReplacements);
+            Message.sendMessage(player, "atp_user", messageReplacements);
             return true;
         }
 
-        Message.sendPlayer(player, "atp_usage");
+        Message.sendMessage(player, "atp_usage");
 
         return true;
     }
@@ -110,6 +121,6 @@ public class AdminTeleportCommand implements CommandExecutor, TabCompleter {
             return null;
         }
 
-        return Arrays.asList();
+        return List.of();
     }
 }
